--- a/AdrianOmbria_ProyectoFinal/administracion/css/singup.css
+++ b/AdrianOmbria_ProyectoFinal/administracion/css/singup.css
@@ -35,6 +35,7 @@ body {
 input[type="text"],
 input[type="password"],
 input[type="number"],
+input[type="float"],
 input[type="email"] {
     display: block;
     width: 300px;
