--- a/AdrianOmbria_ProyectoFinal/css/home.css
+++ b/AdrianOmbria_ProyectoFinal/css/home.css
@@ -117,7 +117,7 @@
 
 .des {
     width: 100%;
-    height: 20px;
+    height: auto;
     line-height: 20px;
     overflow: hidden;
     opacity: 0.5;
@@ -141,9 +141,8 @@
 .pre-btn {
     border: none;
     width: 10vw;
-    height: 100%;
     position: absolute;
-    top: -300px;
+    top: 250px;
     display: flex;
     justify-content: center;
     background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #fff 100%);
@@ -154,7 +153,6 @@
 .nxt-btn {
     border: none;
     width: 10vw;
-    height: 100%;
     position: absolute;
     top: 250px;
     display: flex;
@@ -230,4 +228,3 @@
 a {
     text-decoration: none;
 }
-
